--- a/Exploratory Data Analysis.ipynb
+++ b/Exploratory Data Analysis.ipynb
@@ -2279,10 +2279,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "What's the average byte size of mobile apps?\n",
     "    1.991345e+08\n",
@@ -2292,10 +2290,18 @@
     "\n",
     "\n",
     "How many mobile apps are games and what is the general categorical distribution of apps by genre?\n",
-    "11097 are games\n",
+    "    11097 are games\n",
     "\n",
-    "What are the most popular mobile games by total popular rating?\n"
+    "What are the most popular mobile games by total popular rating?\n",
+    "    Fruit ninja classic and clash of clans"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
