--- a/Data Analysis on Fatal Police Shootings .ipynb
+++ b/Data Analysis on Fatal Police Shootings .ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Police fatal shootings in the United States has been a problem for decades, but it was not until 2014 after the shooting of Michael Brown when people started questioning police accountaibility and the racial profiling that accopamnied the shootings. This event also started the #blacklivesmatter movement to fight for social justice and equality. I've gathered data from kaggle.com on fatal police shootings since 2015 to explore the depth of the problem. It's important to note that the data does not account for anything before 2015. Accorfing to the description of the dataset on kaggle, \"Since Jan. 1, 2015, The Washington Post has been compiling a database of every fatal shooting in the US by a police officer in the line of duty.\n",
+    "Police fatal shootings in the United States has been a problem for decades, but it was not until 2014 after the shooting of Michael Brown when people started questioning police accountaibility and the racial profiling that accopamnied the shootings. This event also started the #blacklivesmatter movement to fight for social justice and equality. I've gathered data from kaggle.com on fatal police shootings since 2015 to explore the depth of the problem. It's important to note that the data does not account for anything before 2015. According to the description of the dataset on kaggle, \"Since Jan. 1, 2015, The Washington Post has been compiling a database of every fatal shooting in the US by a police officer in the line of duty.\n",
     "It's difficult to find reliable data from before this period, as police killings haven't been comprehensively documented, and the statistics on police brutality are much less available. As a result, a vast number of cases go unreported.\" Now let's analyze the kaggle data"
    ]
   },
@@ -336,7 +336,8 @@
    "outputs": [],
    "source": [
     "\n",
-    "del df['gender']"
+    "del df['gender']\n",
+    "race = ['white','black','Hispanic']"
    ]
   },
   {
@@ -452,7 +453,228 @@
     "asian: 5.9%\n",
     "\n",
     "\n",
-    "\n"
+    "\n",
+    "below is the total amount of fatal shots\n",
+    "now let's see the ratio of each race shot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2534"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.index[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "percentage_w_poeple_shot = (num_w_killed/2534)*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "47.39542225730071"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "percentage_w_poeple_shot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "percentage_b_poeple_shot = (num_b_killed/2534)*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24.388318863456984"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "percentage_b_poeple_shot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "percentage_h_poeple_shot = (num_h_killed/2534)*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16.692975532754538"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "percentage_h_poeple_shot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the dataset's manner of death column, we can see both \"shot\" and \"shot and tasered\". Now let's see which race(white,african american, and hispanic) the cops have been the most violent with by getting the number of people \"shot and tasered \" from each of the mentioned races"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_number_violent_incidents(race):\n",
+    "    index=0\n",
+    "    count =0\n",
+    "    for race_type in df['race']:\n",
+    "        if race_type == race:\n",
+    "             if df['manner_of_death'][index] == 'shot and Tasered':\n",
+    "                count +=1\n",
+    "        index+=1        \n",
+    "    return count        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratio_w_violent = (get_number_violent_incidents('W')/num_w_killed)*100\n",
+    "ratio_b_violent = (get_number_violent_incidents('B')/num_b_killed)*100\n",
+    "ratio_h_violent = (get_number_violent_incidents('H')/num_h_killed)*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.49458784346378"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ratio_w_violent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.634304207119741"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ratio_b_violent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.5650118203309695"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ratio_h_violent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's visualize our findings with graphs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "percentage_shot_array=[percentage_w_poeple_shot,percentage_b_poeple_shot,percentage_h_poeple_shot]"
    ]
   },
   {
